[package]
name = "solabi"
version = "0.0.2"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "Solidity ABI implementation in Rust"
documentation = "https://docs.rs/solabi"
readme = "README.md"
homepage = "https://github.com/nlordell/solabi-rs"
repository = "https://github.com/nlordell/solabi-rs"
license = "MIT OR Apache-2.0"
keywords = ["solidity", "abi", "ethereum"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
ethaddr = { version = "0.1", features = ["macros"] }
ethdigest = { version = "0.1", features = ["keccak", "macros"] }
ethnum = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
hex-literal = "0.3"
serde_json = "1"
