[package]
name = "solabi"
version = "0.0.3"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "Solidity ABI implementation in Rust"
documentation = "https://docs.rs/solabi"
readme = "README.md"
homepage = "https://github.com/nlordell/solabi-rs"
repository = "https://github.com/nlordell/solabi-rs"
license = "MIT OR Apache-2.0"
keywords = ["solidity", "abi", "ethereum"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = []
macros = ["ethprim/macros"]

[dependencies]
ethprim = { version = "0.1", features = ["keccak", "serde"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
ethprim = { version = "0.1", features = ["macros"] }
hex-literal = "0.3"
serde_json = "1"
