[package]
name = "solabi"
version = "0.2.0"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "Solidity ABI implementation in Rust"
documentation = "https://docs.rs/solabi"
readme = "README.md"
homepage = "https://github.com/nlordell/solabi-rs"
repository = "https://github.com/nlordell/solabi-rs"
license = "MIT OR Apache-2.0"
keywords = ["solidity", "abi", "ethereum"]
categories = ["cryptography::cryptocurrencies"]

[features]
sha3 = ["ethprim/sha3"]

[dependencies]
ethprim = { version = "0.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
hex-literal = "1"
serde_json = "1"
